- refactor(project): Add Element Plus - refactor(index): Container

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "types": [
-      "node"
+      "node",
+      "element-plus/global"
     ],
   },
   "include": [
