--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@antv/hierarchy": "^0.6.12",
+    "@antv/layout": "^0.3.25",
     "@element-plus/icons-vue": "^2.3.1",
     "@logicflow/core": "^1.2.27",
     "@logicflow/extension": "^1.2.27",
