--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antv/g6": "^4.8.24",
     "@antv/layout": "^0.3.25",
     "@element-plus/icons-vue": "^2.3.1",
     "@logicflow/core": "^1.2.27",
