--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@logicflow/core": "^1.2.27",
     "@logicflow/extension": "^1.2.27",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.21"
