--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.7.2",
     "element-plus": "^2.7.3",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
